# IPC

boost_asio/: CMakeCache.txt  CMakeLists.txt  Makefile  asio_client.cpp  asio_server.cpp  boost_example_client.cpp  boost_example_server.cpp  boost_test.out  client.out  client2.out  cmake_install.cmake  server.out  server2.out
shared_memory/: constructor.out  consumer.out  read.out  write.out
socket/: a.out  client  client.c  client.out  clinet  clinet.out  readme.txt  scanf_practice.c  server  server.c  server.out
socket/unix_io/: readline.c
